# guised-up

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Makefile  README.md  artisan  composer.json  docker-compose.yml  phpunit.xml
app/Enums/: InteractionType.php
app/Http/Middleware/: RequestIdMiddleware.php
app/Http/Requests/: StoreInteractionRequest.php  StorePostRequest.php
app/Jobs/: GeneratePostEmbedding.php
app/Models/: Interaction.php  Post.php  PostEmbedding.php  User.php
app/Providers/: AppServiceProvider.php
bootstrap/: app.php
config/: app.php  cache.php  database.php  feed.php  filesystems.php  queue.php  sanctum.php  services.php  session.php
database/factories/: PostFactory.php  UserFactory.php
database/migrations/: 0001_01_01_000000_create_users_table.php  2026_06_30_000100_create_posts_table.php  2026_06_30_000200_create_post_embeddings_table.php  2026_06_30_000300_create_interactions_table.php
database/seeders/: DatabaseSeeder.php
docs/: ENGINEERING_REVIEW.md  PROJECT_EXPLANATION.md  TSD.md  WALKTHROUGH.md
embedding/: .dockerignore  Dockerfile  pyproject.toml
embedding/src/embedding/: __init__.py  main.py
embedding/tests/: test_embeddings.py
embedding_service/: Dockerfile  pyproject.toml
embedding_service/tests/: test_embeddings.py
mobile/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
mobile/src/api/: client.ts
routes/: api.php  console.php
sql/: queries.sql
tests/Unit/: AuthenticityScorerTest.php  FeedCacheKeysTest.php  FeedRankingServiceTest.php  HashEmbeddingGeneratorTest.php
(+20 files in other folders)
