[tool.poetry]
name = "guised-up-embedding"
version = "0.1.0"
description = "Embedding service for the Guised Up Real Connections Feed"
authors = ["Mithlesh Upadhyay <mithleshupadhyay515@gmail.com>"]
packages = [{ include = "embedding", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.115.0"
pydantic = ">=2.9.0"
uvicorn = { extras = ["standard"], version = ">=0.30.0" }

[tool.poetry.group.dev.dependencies]
httpx = ">=0.27.0"
pytest = ">=8.3.0"
ruff = ">=0.6.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
